fix(step4): disable horizontal scroll on desktop, enforce max-width on max threshold input (#3355)

--- a/packages/app/src/modules/declaration-remuneration/steps/Step4QuartileDistribution.module.scss
+++ b/packages/app/src/modules/declaration-remuneration/steps/Step4QuartileDistribution.module.scss
@@ -88,6 +88,7 @@
 
 	tbody td .inputWithUnit input.fr-input {
 		width: 5.5rem;
+		max-width: 5.5rem;
 		margin-left: 0;
 	}
 
